<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ad"
            android:icon="@drawable/ads"
            android:title="@string/recommended_app" />
        <item
            android:id="@+id/fav"
            android:icon="@drawable/start"
            android:title="@string/favourite" />
        <item
            android:id="@+id/bookmarked"
            android:icon="@drawable/bookmark"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/random"
            android:icon="@drawable/news"
            android:title="@string/random_news" />

        <item
            android:id="@+id/invite"
            android:icon="@drawable/invite"
            android:title="@string/invite" />
        <item
            android:id="@+id/log"
            android:icon="@drawable/user"
            android:title="Sign In" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/info"
            android:title="@string/about" />
    </group>

</menu>
